In the middle configuring our fetching

--- a/Customer App/Customer App.csproj
+++ b/Customer App/Customer App.csproj
@@ -91,6 +91,9 @@
 	  <MauiXaml Update="ClassListPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="NewPage2.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="ProfilePage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
